Bug 468672 - "Save Copy As" does not create new file or does not save into existing file
Summary: "Save Copy As" does not create new file or does not save into existing file
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: 22.12.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 469632 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-04-19 05:51 UTC by Christian Hartmann
Modified: 2023-05-12 03:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Hartmann 2023-04-19 05:51:16 UTC
STEPS TO REPRODUCE
1. Open kate
2. Open existing or create new file
3. Save file (optional)
4. "Save Copy As" to a differently named file (already existing or new)
5. Open copy


OBSERVED RESULT
a) on existing file a warning dialog pops up (correct)
b) no new file copy is created or written to exisiting file


EXPECTED RESULT
A) warning dialog for existing files
B) new copy will be created or exisitng file will be replaced with copy

SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma:  KDE neon
KDE Plasma Version:  5.27.4
KDE Frameworks Version:  5.105.0
Qt Version: 5.15.6
Display server: X11

ADDITIONAL INFORMATION
-
Comment 1 Grósz Dániel 2023-04-23 04:27:31 UTC
Same here. Maybe related to the fixing of Bug 466571.
Comment 2 Waqar Ahmed 2023-04-28 07:24:57 UTC
Git commit 446e689706c89981754e3b99bfa2263e9c889f7a by Waqar Ahmed.
Committed on 28/04/2023 at 07:24.
Pushed by waqar into branch 'master'.

Fix Save Copy As.. not working anymore

The temporary file must live as long as the file copy job is running

M  +3    -2    src/document/katedocument.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/446e689706c89981754e3b99bfa2263e9c889f7a
Comment 3 Waqar Ahmed 2023-04-28 07:25:49 UTC
Git commit c5104fe081193119658f8f27f2a4441f6cc1d428 by Waqar Ahmed.
Committed on 28/04/2023 at 07:25.
Pushed by waqar into branch 'kf5'.

Fix Save Copy As.. not working anymore

The temporary file must live as long as the file copy job is running
(cherry picked from commit 446e689706c89981754e3b99bfa2263e9c889f7a)

M  +3    -2    src/document/katedocument.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/c5104fe081193119658f8f27f2a4441f6cc1d428
Comment 4 Waqar Ahmed 2023-05-12 03:48:44 UTC
*** Bug 469632 has been marked as a duplicate of this bug. ***