Fix Save Copy As.. not working anymore

The temporary file must live as long as the file copy job is running

BUG: 468672
(cherry picked from commit 446e689706c89981754e3b99bfa2263e9c889f7a)